# views/age-categories.go
@@ -1,0 +1,9 @@
+package views
+
+type CreateAgeCategoryRequest struct {
+	Title string `json:"title"`
+}
+
+type UpdateAgeCategoryRequest struct {
+	Title string `json:"title"`
+}
